@@ -1,23 +1,25 @@
-Iron=Iron
-Bauxite=Bauxite
-Chrome=Chrome
-Cobalt=Cobalt
-Copper=Copper
-Gold=Gold
-Lead=Lead
-Manganese=Manganese
-Nickel=Nickel
-Platinum=Platinum
-Quarts=Quarts
-Rutile=Rutile
-Silver=Silver
-Tin=Tin
-Wolfram=Wolfram
-Uranium=Uranium
-Zinc=Zinc
-Quartz=Quartz
-Omnine=Omnine
-Flourite=Flourite
+iron=Iron
+bauxite=Bauxite
+chrome=Chrome
+cobalt=Cobalt
+copper=Copper
+gold=Gold
+lead=Lead
+manganese=Manganese
+nickel=Nickel
+platinum=Platinum
+quarts=Quarts
+rutile=Rutile
+silver=Silver
+thorium=Thorium
+tin=Tin
+tungsten=Tungsten
+wolfram=Wolfram
+uranium=Uranium
+zinc=Zinc
+quartz=Quartz
+omnine=Omnine
+flourite=Flourite
 pseudoliquid-amorphous-crystal=Pseudoliquid amorphous crystal
 
 Om=Om
@@ -55,6 +57,7 @@ omnide-salt=__1__ omnidic salt
 control_crystal=__1__-__2__-__3__ crystallonic
 alpha-shard=__1__ shard-alpha
 crystal-board=__1__ frame
+crystal-powder=__1__ crystal powder
 beta-shard=__1__ shard-beta
 gamma-shard=__1__ shard-gamma
 control_crystal_hybrid=__1__-__2__-__3__ __4__ electrocrystal
@@ -95,6 +98,8 @@ crystal-reactor=Back on earth, after a meteor with a mysterious substance landed
 [recipe-name]
 crystallomnizer=Crystallomnizer Mk __1__
 crystal=__1__ Crystal
+crystal-powder=__1__ crystal powder
+crystalline=Crystalline __1__
 omnide-salting= __1__ Salting
 ore-solvation=__1__-Omnide solution
 crystal-omnitraction=__1__
